<resources>
    <string name="app_name">Picture Of The Day</string>
    <string name="search_in_wiki">Поиск в википедии</string>
    <string name="wiki_search_helper">Поищите термин в википедии</string>
    <string name="before_yesterday">Позавчера</string>
    <string name="yesterday">Вчера</string>
    <string name="today">Сегодня</string>
    <string name="photo_of_the_day_stub">Photo of the day</string>
    <string name="bottom_app_bar_description">Описание</string>
    <string name="dark_mode">Режим затемнения</string>
    <string name="settings_header">Настройки</string>
    <string name="pod_header_text">Изображение дня от NASA</string>
    <string name="with_description">С описанием</string>
    <string name="hd_quality">HD-качество</string>
    <string name="settings">Настройки</string>
    <string name="main">Главная</string>
    <string name="mars">Марс</string>
    <string name="random_date">Случайно</string>
    <string name="choose_date">Выбрать дату</string>
    <string name="mars_rover_description">Фотографии сделаны марсоходом Curiosity. Дата его прибытия на Марс - 06.08.2012.</string>
    <string name="mars_rover_selected_date">Показано фото за</string>
    <string name="select_date">Выберите дату</string>
    <string name="wiki_search_icon_content_description">Найти в википедии</string>
    <string name="wiki_search_helper_text">Найдите неизвестный термин</string>
    <string name="wiki_search_hint">Поискать в Википедии</string>
    <string name="image_detail_content_description">Full image</string>
    <string name="video_frame_button_text">Смотреть</string>
    <string name="video_frame_description">Сервер NASA вместо изображения отправил видео. Нажмите кнопку ниже, чтобы посмотреть его на YouTube.</string>
</resources>