<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.motion.widget.MotionLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutDescription="@xml/main_fragment_scene">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/constraint_start"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/side_guideline_size" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/constraint_end"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/side_guideline_size" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/constraint_search_field"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.15" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/wiki_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="11dp"
            android:alpha="1"
            app:layout_constraintBottom_toBottomOf="@id/constraint_search_field"
            app:layout_constraintEnd_toEndOf="@id/constraint_end"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_wikipedia" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:alpha="0"
            android:hint="@string/wiki_search_hint"
            app:counterEnabled="true"
            app:counterMaxLength="20"
            app:endIconContentDescription="@string/wiki_search_icon_content_description"
            app:endIconDrawable="@drawable/ic_wikipedia"
            app:endIconMode="custom"
            app:helperText="@string/wiki_search_helper_text"
            app:helperTextEnabled="true"
            app:layout_constraintBottom_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="@id/constraint_end"
            app:layout_constraintStart_toStartOf="@id/constraint_start">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_input_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="20" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chip_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/main_chip_group_margin_top"
            app:layout_constraintEnd_toEndOf="@id/constraint_end"
            app:layout_constraintStart_toStartOf="@id/constraint_start"
            app:layout_constraintTop_toTopOf="@id/constraint_search_field">

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_filter_description"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/with_description" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_filter_hd_quality"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hd_quality" />

        </com.google.android.material.chip.ChipGroup>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tab_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/pod_tab_layout_margin_top"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/chip_group" />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/view_pager"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tab_layout" />

    </androidx.constraintlayout.motion.widget.MotionLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>