<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/image_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/image_view"
            android:layout_width="0dp"
            android:layout_height="@dimen/main_image_height"
            android:layout_marginTop="@dimen/main_image_margin_top"
            android:alpha="0"
            android:contentDescription="@string/photo_of_the_day_stub"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/heart_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/asl_heart_unfill"
            android:contentDescription="@null"
            android:thumb="@null"
            android:translationX="80dp"
            app:layout_constraintEnd_toEndOf="@id/image_view"
            app:layout_constraintTop_toTopOf="@id/image_view" />

        <LinearLayout
            android:id="@+id/video_frame_layout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingStart="@dimen/video_frame_layout_padding_horizontal"
            android:paddingEnd="@dimen/video_frame_layout_padding_horizontal"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/video_frame_description" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_show_video"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/button_show_video_margin_top"
                android:text="@string/video_frame_button_text" />

        </LinearLayout>

        <include
            android:id="@+id/loading_include"
            layout="@layout/loading_layout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <include
        android:id="@+id/bottom_sheet_include"
        layout="@layout/main_bottom_sheet" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>